--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button class="button-wrapper__button" type="button" id="button">Play</button>
       </section>
       <section class="error" id="error" tabindex="0">
-        <p>Please write your name to play</p>
+        <p>Please write your name to play.</p>
       </section>
     </main>
     <script src="app.js"></script>
